[tool.poetry]
name = "hexlet"
version = "0.1.0"
description = ""
authors = ["SamMirabyan <samvel.mirabyan@gmail.com>"]
packages = [
    { include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
